bugFix up button (z-index & ↑)

--- a/client/src/app/views/shared/up-button/up-button.component.scss
+++ b/client/src/app/views/shared/up-button/up-button.component.scss
@@ -11,6 +11,7 @@
   transition: 0.3s ease-in-out;
 
   opacity: 0;
+  z-index: 10001;
   transform: scale(1.5);
   pointer-events: none;
 
